Add the eduation and card  section

--- a/index.html
+++ b/index.html
@@ -1,19 +1,56 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Basic -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-react-app</title>
-      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <!-- Title (VERY IMPORTANT) -->
+    <title>Abdullah | MERN Stack Developer</title>
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Abdullah – MERN Stack Developer. I build modern, responsive, and scalable web applications using MongoDB, Express, React, and Node.js."
+    />
+    <meta
+      name="keywords"
+      content="Abdullah, MERN Stack Developer, React Developer, Node.js, MongoDB, Web Developer Portfolio"
+    />
+    <meta name="author" content="Abdullah" />
+
+    <!-- Open Graph (for WhatsApp, Facebook, LinkedIn) -->
+    <meta property="og:title" content="Abdullah | MERN Stack Developer" />
+    <meta
+      property="og:description"
+      content="Passionate MERN Stack Developer building modern web applications."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/portfolio-preview.png" />
+    <meta property="og:url" content="https://your-portfolio-link.com" />
+
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="/fonts/Gemini_Generated_Image_ltvr7bltvr7bltvr.png"
+    />
+
+    <!-- AOS Animation -->
+       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
+
   <body>
     <div id="root"></div>
-        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+
+
+    <!-- React Entry -->
+    <script type="module" src="/src/main.jsx"></script>
+
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
   </script>
-    <script type="module" src="/src/main.jsx"></script>
-  
   </body>
 </html>
